change http data format

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
         <section class="form">
 
-            <form onsubmit="submitForm(event)" method="POST">
+            <form id="formSubmit" onsubmit="submitForm(event)" method="POST">
 
                 <div class="form-container">
 
